--- a/block-BHaaan/assests/stylesheet/style.css
+++ b/block-BHaaan/assests/stylesheet/style.css
@@ -129,9 +129,9 @@ table {
     border-spacing: 0;
 }
 
-/* body{
-    text-align: center;
-} */
+body{
+    line-height: 1.5;
+}
 img {
     text-align: center;
 }
@@ -141,27 +141,46 @@ a {
     /* text-align: center; */
 }
 
-nav {
+nav  {
     background-color: violet;
     text-align: center;
     padding: 16px;
+    text-transform: capitalize;
 }
+nav a{
+    padding: 16px;
+}
+p{
+    font-size: 18px;
+    margin-bottom: 16px;
+}
+.time{
+    color: red;
+    margin: 16px 0;
+    text-transform: capitalize;
+    font-size: 20px
 
+    
+}
+img{
+    width: 100%;
+    height: 300px;
+}
 h2 {
-    font-size: 32px;
+    font-size: 36px;
+    color: black;
+    margin:24px 0;
+    text-transform: capitalize;
 }
-
-h5 {
-    color: blueviolet;
-    /* text-align: center; */
+.blog{
+    width: 600px;
+    margin:0 auto;
 }
 
 footer {
     background-color: rgb(169, 181, 58);
     padding: 16px;
     text-align: center;
+    margin-top: 12px;
 }
-section{
-    width: 300px;
-    margin: auto;
-}
+
